# kfs

./: .gitignore  Cargo.toml  DEVCONTAINER.md  Makefile  README.md  analyze.py  build.rs  foo  mem.txt  objdump-x  out  run-tests.sh  run.sh  rust-toolchain.toml  rustc-ice-2025-11-30T14_23_10-61636.txt  rustc-ice-2025-11-30T14_23_10-61637.txt  rustc-ice-2025-11-30T14_23_14-61701.txt  rustc-ice-2025-11-30T14_23_14-61702.txt  rustc-ice-2025-11-30T14_23_19-61763.txt  rustc-ice-2025-11-30T14_23_19-61764.txt  rustc-ice-2025-11-30T14_23_22-61826.txt  rustc-ice-2025-11-30T14_23_22-61827.txt  rustc-ice-2025-11-30T14_23_25-61886.txt  rustc-ice-2025-11-30T14_23_25-61887.txt  rustc-ice-2025-11-30T14_23_29-61948.txt  rustc-ice-2025-11-30T14_23_29-61949.txt  rustc-ice-2025-11-30T14_23_40-62011.txt  rustc-ice-2025-11-30T14_23_40-62012.txt  rustc-ice-2025-11-30T14_23_44-62079.txt  rustc-ice-2025-11-30T14_23_44-62080.txt  rustc-ice-2025-11-30T14_23_54-62198.txt  rustc-ice-2025-11-30T14_23_54-62199.txt  rustc-ice-2025-11-30T14_23_57-62261.txt  rustc-ice-2025-11-30T14_23_57-62262.txt  rustc-ice-2025-11-30T14_23_59-62323.txt  rustc-ice-2025-11-30T14_23_59-62324.txt  rustc-ice-2025-11-30T14_24_02-62383.txt  rustc-ice-2025-11-30T14_24_33-62454.txt  rustc-ice-2025-11-30T14_24_33-62455.txt  rustc-ice-2025-11-30T14_24_50-62527.txt  (+65 more)
.cargo/: config.kernel.toml  config.toml  i386-unknown-none.json
.devcontainer/: .zshrc  Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/disabled-workflows/: cargo-test.yml
.github/workflows/: cargo-test.yml  clippy.yml  docker.yml  rustfmt.yml  test.yml
assets/: boot.s
docker/: Dockerfile
docs/: TESTING.md
grub/: grub.cfg
scripts/: build_iso.sh  run.sh
src/: bitmap.rs  boot.rs  conv.rs  gdt.rs  keyboard.rs  kmalloc.rs  lib.rs  macros.rs  main.rs  panic.rs  port.rs  print.rs  printk.rs  ps2.rs  qemu.rs  serial.rs  shell.rs  stack_print_serial.rs  terminal.rs  tester.rs  vga.rs  vmm.rs
src/arch/: x86.rs
src/gdt/: access.rs
src/keyboard/: layout.rs
src/ps2/: controller.rs  interrupt.rs  io.rs  mod.rs  (+1 more)
tests/: alloc.rs  buddy_allocator.rs  buddy_allocator_panic.rs  global_interrupt_lock.rs  irq_lock.rs  print.rs
(+39 files in other folders)
